Update to 1.21.5 and clean-up code